2007-08-15  Tim Sutton   <tim@linfiniti.com>

 Final piece of the puzzle to have a working mac bundle:
       - install data into Contents/Resources now
       - moved mac path stuff into systemDir()

2007-08-16  Torsten Rahn  <rahn@kde.org>

    * src/lib/MarbleDirs.h: 
    Adding summary of the discussion with Tim Sutton.

2007-08-15  Torsten Rahn  <rahn@kde.org>

    * src/lib/maptheme.cpp: 
    * src/lib/MarbleDirs.cpp: 
    Making MarbleDirs.h uninlined by adding MarbleDirs.cpp
    as suggested by Pino Toscano.
    Getting rid of unixDir.

2007-08-15 Carlos Licea <>
    *Integration:
    Finished the integration of the flat projection.

2007-08-15  Torsten Rahn  <rahn@kde.org>

    * src/lib/MarbleDirs.h: 
    Adding some explanations how MarbleDirs is 
    meant to work.

2007-08-15  Torsten Rahn  <rahn@kde.org>
	
    * CODING: 
    Following up to Ingwa's recent work rules were 
    added when a class should be prefixed "Marble".
    Fell free to add cases I forgot.

2007-08-15  Tim Sutton   <tim@linfiniti.com>

 Added logic to qtmain to search for qjpeg image plugin
 in application bundle.
 Modified 2-release-qt.sh to install qt image plugins
 and also tweaked it so Qt frameworks go into
 @executable_path/../Frameworks/Qt*
 Fixed compiler warnings in :
   src/lib/MarbleWidget.cpp
   src/lib/TileCreator.cpp
   src/lib/GeoPolygon.cpp
 The application now runs from the generated OSX
 bundle but with some issues that need to be resolved.

2007-08-14  Inge Wallin  <inge@lysator.liu.se>

	Rename LegendBrowser into MarbleLegendBrowser
	* src/lib/LegendBrowser.cpp: rename into MarbleLegendBrowser.cpp
	* src/lib/LegendBrowser.h: rename into MarbleLegendBrowser.h
	* src/lib/MarbleControlBox.ui: refer to new name
	* src/lib/MarbleControlBox.cpp: refer to new name
	* src/lib/CMakeLists.txt: reflect name change
	
	Rename katlasthemeselectview into MarbleThemeSelectView:
	* src/lib/katlasthemeselectview.cpp: rename into
	MarbleThemeSelectView.cpp: